# IntroLLMOps

./: .gitignore  README.md  mathieu_soul_model_training_pipeline.json  pyproject.toml  test_dataset.csv  train_dataset.csv
Pipeline/scripts/: pipeline_runner.py
scripts/: get_component_logs.py  pipeline_runner.py  pipeline_status.py  validate_gcp_setup.py
src/: constants.py
src/pipeline_components/: data_transformation_component.py  evaluation_component.py  fine_tuning components.py  fine_tuning_component.py  fine_tuning_component.py.backup  inference_component.py
src/pipelines/: model_training_pipeline.py
